# neo

./: .gitignore  CHANGELOG_CONTROLLED_EXECUTION_PHASE0_2.md  CHANGELOG_INSTALL_README_20260701.md  CHANGELOG_LLM_COORDINATOR_P1.md  CHANGELOG_SKILLS_TAXONOMY_ABCD.md  CHANGELOG_V041_APPM_CCF_IMMUNE_ESCAPE.md  CHANGELOG_V042_P1_APPM_EXPLAINABILITY.md  CHANGELOG_V043_CCF21.md  CHANGELOG_V04_EVIDENCE_SAFETY_ESCAPE.md  CITATION.cff  LICENSE.txt  NOTICE  README.md  README_PATCH_V043_CCF21.md  README_zh.md  RELEASE.md  RELEASE_REFRESH_20260615.md  RELEASE_V04_20260616.md  neoag_docs_and_code_changes.patch  neoag_run_demo_stub_only.patch  nextflow.config  pyproject.toml  release_manifest.agent_skills_p0_p1.json  release_manifest.controlled_execution_phase0_2.json  release_manifest.json  release_manifest.llm_coordinator_p1.json  release_manifest.skills_taxonomy_abcd.json  run_fromVCF.sh  run_fromVCF_nohla.sh  run_main_all.sh  run_main_all_nohla.sh  run_main_all_qc.sh  run_main_fromVCF.sh  run_main_full.sh
assets/: empty_cnv.tsv  empty_expression.tsv  empty_hla_loh.tsv  empty_mhcflurry.tsv  empty_netmhcpan.tsv  empty_normal_expression.tsv  empty_normal_hla_ligands.tsv  empty_purity.tsv  empty_vep.tsv
conda/: env.neoag-ascat.yml  env.neoag-fusion.yml  env.neoag-fusioncatcher.yml  env.neoag-gatk.yml  env.neoag-pyclone.yml  env.neoag-splice.yml  env.neoag-splicemutr.yml  env.neoag-tools-lite.yml  env.neoag-tools.yml  env.neoag-vep.yml
conda_envs/: env.neoag-ascat-v3.yml  env.neoag-fusion-base.yml  env.neoag-sequenza.yml  env.neoag-tools-lite.yml  env.neoag-tools.yml
conf/: demo.config  easyfuse.nextflow.config  local.config  main_full.config  pip-constraints-tools.txt  run.conda.toml  run.hcc1143.tierb.toml  run.hcc1395.main.toml  run.hcc1395.resume.toml  run.hcc1395.score.toml  run.hcc1395.splice.real.toml  run.hcc1395.splice.toml  run.hcc1395.tierb.toml  run.hcc1395.toml  run.mycase.toml  run.private.example.toml  run.production_multisource.example.toml  run.snv_wes.example.toml  run.snv_wes_fixture.toml  run.stub.toml  run.sv_wgs_phase1.example.toml  site.config.example  snv_wes_demo.config  sv_demo.config  sv_wes_demo.config  tools.config  tools.env.local.example.sh  tools.env.sh  tools.toml
deploy/: conda_unpack.bash  indic.md  load_local_images.sh  pull_images.sh  test_docker_arriba.sh  test_docker_ascat_v2.sh  test_docker_ascat_v3.sh  test_docker_delly.sh  test_docker_easyfuse.sh  test_docker_fusioncatcher.sh  test_docker_gatk4.sh  test_docker_gridss2.sh  test_docker_lohhla.sh  test_docker_manta.sh  test_docker_optitype.sh  test_docker_pvactools.sh  test_docker_samtools.sh  test_docker_star_fusion.sh  test_docker_svaba.sh  test_docker_tabix.sh  test_docker_vep.sh
docs/: AGENT_SKILLS_P0_P1.md  CHANGELOG.md  CONTROLLED_EXECUTION_PHASE0_2.md  EVIDENCE_CONSENSUS.md  HCC1395_pipeline_demo.pptx  INPUT_ARCHITECTURE.md  INSTALL_AND_DATA.md  LLM_COORDINATOR_P1.md  MODEL_API_AND_AGENT_FRAMEWORK_SELECTION.md  NETMHCPAN_CONTAINER.md  ONLINE_RELEASE.md  PRIORITY_TOOL_CONTAINERS.md  PRODUCTION_WORKFLOW.md  PROJECT_DATA_PATHS.md  Pipeline 运行跟踪.docx  Pipeline现状.docx  RELEASE_BOUNDARY.md  RELEASE_BOUNDARY_V04.md  SARCOMA_RNA_SUPPORTED_V2.md  SITE_CONFIG_BOUNDARY.md  SKILLS_TAXONOMY_ABCD.md  SKILL_FIRST_MIGRATION.md  SNV_PHASE1_WES.md  SV_PHASE1_5_WES.md  SV_PHASE1_WGS.md  TOOLS_SETUP.md  TOOL_INVENTORY.md  USAGE_GUIDE.md  V041_APPM_CCF_IMMUNE_ESCAPE.md  V042_P1_APPM_EXPLAINABILITY.md  V043_CCF21.md  VCF到肽段.docx  (+5 more)
(+737 files in other folders)
